--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,7 +37,7 @@
         </header>
 
 
-        <div class="container col-md-12"></div>
+        <div class="container col-md-12"></div><!-- top section text -->
         <div class="col-md-6" id="now">
             <h3>Find us</h3>
             <p><span class="fa fa-address-book" aria-hidden="true"></span>  18 Haddow Street
@@ -58,7 +58,7 @@
 
 
 
-    <div class="grid">
+    <div class="grid"><!-- css images effect -->
 
 
         <figure class="effect-julia">
@@ -103,8 +103,7 @@
             </figcaption>
         </figure>
     </div>
-    </div>
-    </div>
+
 
 
 {% endblock %}
