--- a/templates/contact.html
+++ b/templates/contact.html
@@ -78,7 +78,7 @@
         <figure class="effect-julia">
             <img class= bordering src="{% static 'images/tiers2.jpg' %}" alt="img21"/>
             <figcaption>
-                <h2>Functions <span></span><</h2>
+                <h2>Functions <span></span></h2>
                 <div>
                     <p>Weddings</p>
                     <p>Children Parties </p>
