--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                 <h3> STARTED IN 2012 by JOANNE</h3>
                 <h3> A REAL LOCAL SUCCESS STORY</h3>
             </div>
-            <div class="col-md-4"><img class="bordering" src="{% static 'images/joanne.jpg' %}">
+            <div class="col-md-4"><img class="bordering" src="{% static 'images/frontpage.jpg' %}">
             </div>
         </div>
 
